[SWEP-70] 이미지의 태그조회 API (#166)
