# src/controllers/tsoaTag.controller.ts
@@ -7,9 +7,13 @@ import {
   Tags,
   Response,
   Request,
+  Path,
 } from 'tsoa';
-import {findTagsByDate} from '../services/tsoaTag.service.js';
-import {DateToTags} from '../dtos/tsoaTag.dto.js';
+import {
+  findTagsByDate,
+  findTagsFromImage,
+} from '../services/tsoaTag.service.js';
+import {DateToTags, ImageToTags} from '../dtos/tsoaTag.dto.js';
 import {BaseError, ServerError} from '../errors.js';
 import {
   ITsoaErrorResponse,
@@ -18,6 +22,10 @@ import {
 } from '../models/tsoaResponse.js';
 import {StatusCodes} from 'http-status-codes';
 import {Request as ExpressRequest} from 'express';
+import {
+  ResponseTagListFromImage,
+  ResponseTagListWithDate,
+} from '../models/tsoaTag.model.js';
 
 @Route('tags')
 export class TagsController extends Controller {
@@ -66,7 +74,7 @@ export class TagsController extends Controller {
       error: {
         errorCode: 'SER-001',
         reason: '내부 서버 오류입니다.',
-        data: null,
+        data: {reason: '에러원인 메시지'},
       },
       success: null,
     },
@@ -79,7 +87,7 @@ export class TagsController extends Controller {
       error: {
         errorCode: 'DB-001',
         reason: 'DB 에러 입니다.',
-        data: null,
+        data: {reason: '에러원인 메시지'},
       },
       success: null,
     },
@@ -89,7 +97,7 @@ export class TagsController extends Controller {
     @Query() year: number,
     @Query() month: number,
     @Query() date?: number,
-  ): Promise<ITsoaSuccessResponse<{tags: string[]}>> {
+  ): Promise<ITsoaSuccessResponse<ResponseTagListWithDate>> {
     const user = req.user!;
     const dto = new DateToTags(user.id, year, month, date);
     const tags = await findTagsByDate(dto)
@@ -98,12 +106,90 @@ export class TagsController extends Controller {
       })
       .catch(err => {
         if (!(err instanceof BaseError)) {
-          throw new ServerError();
+          throw new ServerError({reason: err.message});
         } else {
           throw err;
         }
       });
 
+    return new TsoaSuccessResponse(tags);
+  }
+
+  /**
+   * 사용자가 mediaId를 제공하면 해당 이미지와 연관된 태그들의 정보를 제공합니다.
+   *
+   * @summary 이미지의 태그 조회
+   * @param mediaId 이미지의 고유 mediaId
+   * @returns 태그
+   */
+  @Get('/images/{mediaId}')
+  @Tags('Tag')
+  @SuccessResponse(200, 'OK')
+  @Response<ITsoaErrorResponse>(StatusCodes.NOT_FOUND, 'Not Found', {
+    resultType: 'FAIL',
+    error: {
+      errorCode: 'TAG-001',
+      reason: '태그가 없습니다.',
+      data: null,
+    },
+    success: null,
+  })
+  @Response<ITsoaErrorResponse>(StatusCodes.BAD_REQUEST, 'Bad Request', {
+    resultType: 'FAIL',
+    error: {
+      errorCode: 'VAL-001',
+      reason: 'Validation Error',
+      data: {
+        mediaId: {
+          message: 'invalid float',
+          value: 'a',
+        },
+      },
+    },
+    success: null,
+  })
+  @Response<ITsoaErrorResponse>(
+    StatusCodes.INTERNAL_SERVER_ERROR,
+    'Internal Server Error',
+    {
+      resultType: 'FAIL',
+      error: {
+        errorCode: 'SER-001',
+        reason: '내부 서버 오류입니다.',
+        data: {reason: '에러원인 메시지'},
+      },
+      success: null,
+    },
+  )
+  @Response<ITsoaErrorResponse>(
+    StatusCodes.INTERNAL_SERVER_ERROR,
+    'Internal Server Error',
+    {
+      resultType: 'FAIL',
+      error: {
+        errorCode: 'DB-001',
+        reason: 'DB 에러 입니다.',
+        data: {reason: '에러원인 메시지'},
+      },
+      success: null,
+    },
+  )
+  public async getTagListFromImage(
+    @Request() req: ExpressRequest,
+    @Path() mediaId: number,
+  ): Promise<ITsoaSuccessResponse<ResponseTagListFromImage>> {
+    const dto = new ImageToTags(req.user!.id, mediaId);
+    const tags = await findTagsFromImage(dto)
+      .then(result => {
+        return {tags: result};
+      })
+      .catch(err => {
+        if (!(err instanceof BaseError)) {
+          throw new ServerError({reason: err.message});
+        } else {
+          throw err;
+        }
+      });
     return new TsoaSuccessResponse(tags);
   }
 }
